kubernetes/kubernetes-dashboard/k8s-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 8443
    nodePort: 32000 # TODO: remove and change back to ClusterIP
  selector:
    k8s-app: kubernetes-dashboard
